syntax = "proto3";

// 定义包名
option go_package = "../api";

service TestDemo {
	rpc TestHello(TestRequest) returns (TestResponse) {}
}

message TestRequest {
	string name = 1;
}

message TestResponse {
	string greeting = 1;
}
